--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "ejs": "~2.3.1",
     "express": "~4.12.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
     "i2c": "^0.2.1",
-    "socket.io": "^1.3.5",
+    "socket.io": "^1.3.5"
   }
 }
